--- a/web/themes/custom/union_marketing/scss/global/_union-variables.scss
+++ b/web/themes/custom/union_marketing/scss/global/_union-variables.scss
@@ -53,8 +53,8 @@
   }
 }
 
-.node--view-mode-teaser.cu-card .cu-heading {
-  --cu-current-heading-size: var(--cu-ms2);
+.node--course.node--view-mode-teaser h3.cu-heading {
+  --cu-current-heading-size: var(--cu-text-xxxl);
 }
 
 .cu-heading.cu-heading--label {
